<resources>
    <string name="app_name">Bogi`s Udacity Shoe Store App</string>
    <string name="login_text">Login</string>
    <string name="email">email</string>
    <string name="password_text">password</string>
    <string name="register_text">register</string>
    <string name="Welcome">Welcome in the Shoe Store Project!</string>
    <string name="welcome_text">Welcome in Bogi\'s Shoestore! Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris eget sapien ut magna pellentesque auctor. Suspendisse neque nulla, volutpat dapibus enim quis, imperdiet faucibus ipsum. Pellentesque sodales ligula ut nisi luctus tincidunt. Praesent in nulla mi. Fusce tincidunt aliquam dui, id ultrices est elementum id. Nunc eget vestibulum dolor. Proin sit amet gravida lorem. Duis ut odio accumsan, tincidunt neque sed, porta lorem. Suspendisse tempor arcu eget lacus pretium, eu viverra odio consectetur. Aenean aliquam erat non mauris sagittis, nec faucibus nibh mollis. Proin ultricies dui ac molestie suscipit. Pellentesque tincidunt, metus molestie finibus mollis, eros erat suscipit diam, et luctus massa metus id quam.</string>
    <string name="next_text">Next</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="instructions">Instructions</string>
    <string name="instructions_text1">Follow the next steps to add, and list shoes:</string>
    <string name="shoe_list">Shoe List</string>
    <string name="instructiosn_text2">
        <li>Follow the next steps to add, and list shoes:</li>
        \n<li>Tap the SHOE LIST button to list shoes</li>
        \n<li>Tap the <b>+</b> button to upload new shoe datas</li>
        \n<li>Fill the form</li>
        \n<li>Tap on SAVE button to save a new shoe</li>
        \n<li>or tap on the CANCEL button to cancel your input</li>
    </string>
    <string name="shoneNametitle">Shoe name:</string>
    <string name="shoeName">Shoe name</string>
    <string name="description">description</string>
    <string name="description_title">Description:</string>
    <string name="size">Size</string>
    <string name="shoe_size_title">Shoe size:</string>
    <string name="company">Company</string>
    <string name="company_title">Company:</string>
    <string name="add_a_shoe">add a shoe</string>
    <string name="add_a_shoe_title">Add a shoe</string>
    <string name="save">save</string>
    <string name="cancel">cancel</string>
    <string name="logout">Logout</string>
    <string name="_6">6</string>
    <string name="minta_meret">4.6</string>
</resources>
