<?xml version="1.0" encoding="utf-8"?>
<!--This vertical LinearLayout containing the lines(other LinearLayouts)
 of the shoes details. This layout is replicated as many shoes we have-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">
<!--Horizontal LinearLayout, because it will contain two
textViews, which are displayint the datas of the shoe-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingStart="16dp"
        android:paddingLeft="16dp"
        android:paddingTop="16dp"
        android:paddingEnd="16dp"
        android:paddingRight="16dp">

        <TextView
            android:id="@+id/textView25"
            android:layout_width="@dimen/textview_width"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/shoneNametitle"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/shoe_name"
            android:layout_width="@dimen/textview_width"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/shoeName" />

    </LinearLayout>

<!--Horizontal LinearLayout, because it will contain two
textViews, which are displayint the datas of the shoe-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingStart="16dp"
        android:paddingLeft="16dp"
        android:paddingTop="16dp"
        android:paddingEnd="16dp"
        android:paddingRight="16dp">

        <TextView
            android:id="@+id/textView28"
            android:layout_width="@dimen/textview_width"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/company_title"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/company"
            android:layout_width="@dimen/textview_width"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/company" />
    </LinearLayout>
    <!--Horizontal LinearLayout, because it will contain two
    textViews, which are displayint the datas of the shoe-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingStart="16dp"
        android:paddingLeft="16dp"
        android:paddingTop="16dp"
        android:paddingEnd="16dp"
        android:paddingRight="16dp">

        <TextView
            android:id="@+id/textView30"
            android:layout_width="@dimen/textview_width"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/shoe_size_title"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/size"
            android:layout_width="@dimen/textview_width"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/size" />
    </LinearLayout>
<!--Horizontal LinearLayout, because it will contain two
textViews, which are displayint the datas of the shoe-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingStart="16dp"
        android:paddingLeft="16dp"
        android:paddingTop="16dp"
        android:paddingEnd="16dp"
        android:paddingRight="16dp">

        <TextView
            android:id="@+id/textView32"
            android:layout_width="@dimen/textview_width"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/description_title"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/description"
            android:layout_width="@dimen/textview_width"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/description" />

    </LinearLayout>
<!--This layout is only for decoration-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:orientation="horizontal"
        android:background="@color/colorPrimary"/>

</LinearLayout>