<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Destinations.InstructionsFragment"
    android:orientation="vertical"
    android:background="@color/colorBack">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="?attr/dialogPreferredPadding"
        android:paddingTop="?attr/dialogPreferredPadding"
        android:paddingEnd="?attr/dialogPreferredPadding"
        android:paddingRight="?attr/dialogPreferredPadding"
        android:paddingBottom="?attr/dialogPreferredPadding"
        android:text="@string/instructions"
        android:textAlignment="center"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="?attr/dialogPreferredPadding"
        android:paddingRight="?attr/dialogPreferredPadding"
        android:text="@string/instructions_text1"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:paddingLeft="?attr/dialogPreferredPadding"
        android:paddingEnd="?attr/dialogPreferredPadding"
        android:paddingRight="?attr/dialogPreferredPadding"
        android:text="@string/instructiosn_text2"
        android:textSize="18sp" />
    </LinearLayout>
    </ScrollView>
    <Button
        android:id="@+id/shoe_list"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:backgroundTint="@color/colorAccent"
        android:text="@string/shoe_list"
        android:textColor="@color/colorBack" />

</LinearLayout></layout>