<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
<data>
    <variable
        name="addNewShoe"
        type="com.udacity.shoestore.models.Shoe" />
</data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/colorBack">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/add_a_shoe_title"
                    android:textAlignment="center"
                    android:textSize="24sp" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">


                    <TextView
                        android:id="@+id/textView4"
                        android:layout_width="@dimen/textview_width"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="32dp"
                        android:layout_marginTop="24dp"
                        android:layout_marginEnd="24dp"
                        android:text="@string/shoneNametitle"
                        app:layout_constraintEnd_toStartOf="@+id/shoe_name_edit"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/textView5"
                        android:layout_width="@dimen/textview_width"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="32dp"
                        android:layout_marginTop="24dp"
                        android:layout_marginEnd="24dp"
                        android:text="@string/company_title"
                        app:layout_constraintEnd_toStartOf="@+id/company_name_edit"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/textView4" />

                    <TextView
                        android:id="@+id/textView6"
                        android:layout_width="@dimen/textview_width"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="32dp"
                        android:layout_marginTop="24dp"
                        android:layout_marginEnd="24dp"
                        android:text="@string/shoe_size_title"
                        app:layout_constraintEnd_toStartOf="@+id/size_edit"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/textView5" />

                    <TextView
                        android:id="@+id/textView7"
                        android:layout_width="@dimen/textview_width"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="32dp"
                        android:layout_marginTop="24dp"
                        android:layout_marginEnd="24dp"
                        android:text="@string/description_title"
                        app:layout_constraintEnd_toStartOf="@+id/description_edit"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/textView6" />

                    <EditText
                        android:id="@+id/shoe_name_edit"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="32dp"
                        android:ems="10"
                        android:inputType="textPersonName"
                        android:text="@string/shoeName"
                        app:layout_constraintBaseline_toBaselineOf="@+id/textView4"
                        app:layout_constraintEnd_toEndOf="parent" />

                    <EditText
                        android:id="@+id/company_name_edit"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="32dp"
                        android:ems="10"
                        android:inputType="textPersonName"
                        android:text="@string/company"
                        app:layout_constraintBaseline_toBaselineOf="@+id/textView5"
                        app:layout_constraintEnd_toEndOf="parent" />

                    <EditText
                        android:id="@+id/size_edit"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="32dp"
                        android:ems="10"
                        android:inputType="number"
                        android:text="6"
                        app:layout_constraintBaseline_toBaselineOf="@+id/textView6"
                        app:layout_constraintEnd_toEndOf="parent" />

                    <EditText
                        android:id="@+id/description_edit"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="32dp"
                        android:ems="10"
                        android:inputType="textPersonName"
                        android:text="@string/description"
                        app:layout_constraintBaseline_toBaselineOf="@+id/textView7"
                        app:layout_constraintEnd_toEndOf="parent" />


                </androidx.constraintlayout.widget.ConstraintLayout>
            </LinearLayout>
        </ScrollView>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/cancel_button"
                android:layout_width="match_parent"
                android:layout_height="@dimen/gombheight"
                android:layout_gravity="start"
                android:layout_marginStart="48dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp"
                android:layout_weight="1"
                android:backgroundTint="@color/colorAccent"
                android:text="@string/cancel"
                android:textColor="@color/colorBack"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/save_button"
                app:layout_constraintHorizontal_bias="0.004"
                app:layout_constraintStart_toStartOf="parent" />

            <Button
                android:id="@+id/save_button"
                android:layout_width="match_parent"
                android:layout_height="@dimen/gombheight"
                android:layout_marginEnd="48dp"
                android:layout_weight="1"
                android:backgroundTint="@color/colorAccent"
                android:text="@string/save"
                android:textColor="@color/colorBack"
                app:layout_constraintBaseline_toBaselineOf="@+id/cancel_button"
                app:layout_constraintEnd_toEndOf="parent" />
        </LinearLayout>
    </LinearLayout>
</layout>