<?xml version="1.0" encoding="utf-8"?>
<!--layout to make the layout usable for the data binding-->
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable
            name="shoelist_viewmodel"
            type="com.udacity.shoestore.destinations.shoeListing.ShoeListViewModel" />
    </data>
    <!--ScrollView for the possibility of scrolling especially
at landscape mode-->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">
    <!--Linear layout for the simple vertical view for the texts, and
    for the button-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".destinations.Welcome"
        android:orientation="vertical"
        android:background="@color/colorBack">

                <!--TextView for simple text-->
                <TextView
                    style="@style/title_style"
                    android:text="@string/Welcome" />
                <!--TextView for simple text-->
                <TextView
                    android:id="@+id/textView"
                    style="@style/long_text_style"
                    android:text="@string/welcome_text"
                    android:layout_weight="7"/>


        <!--Button to press - navigate to the next screen-->
        <Button
            android:id="@+id/next"
            style="@style/long_button_style"
            android:text="@string/next_text"
            android:layout_weight="0"
            android:onClick="@{(view) -> shoelist_viewmodel.welcomeClick(view)}"/>

    </LinearLayout>
    </ScrollView>
</layout>