<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorBack"
        android:baselineAligned="false"
        android:orientation="vertical">
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:orientation="vertical"
    >
        <TextView
            android:id="@+id/login_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="44dp"
            android:text="@string/login_text"
            android:textSize="24sp"
            android:textAlignment="center"/>

        <TextView
            android:id="@+id/email_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:freezesText="true"
            android:text="@string/email" />

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="24dp"
            android:autofillHints=""
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:selectAllOnFocus="true"
            android:text="@string/email" />

        <TextView
            android:id="@+id/password_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="10dp"
            android:text="@string/password_text" />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="24dp"
            android:autofillHints=""
            android:hint="@string/password_text"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:selectAllOnFocus="true"
            android:text="@string/login_text" />
</LinearLayout>
        </ScrollView>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false"
            android:orientation="horizontal">

            <Button
                android:id="@+id/register_button"
                android:layout_width="@dimen/button_width"
                android:layout_height="@dimen/gombheight"
                android:layout_gravity="start"
                android:layout_marginStart="48dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp"
                android:layout_weight="1"
                android:backgroundTint="@color/colorAccent"
                android:text="@string/register_text"
                android:textColor="@color/colorBack"/>

            <Button
                android:id="@+id/login_button"
                android:layout_width="@dimen/button_width"
                android:layout_height="@dimen/gombheight"
                android:layout_marginEnd="48dp"
                android:layout_weight="1"
                android:backgroundTint="@color/colorAccent"
                android:text="@string/login_text"
                android:textColor="@color/colorBack"/>
        </LinearLayout>


    </LinearLayout>
</layout>